--- a/main.html
+++ b/main.html
@@ -13,5 +13,7 @@
     <p>MMMMM</p>
     <abbr> dksnfknsdf</abbr>
     <p>Salam</p>
+    <div>Kelvin</div>
+    <span>Soska</span>
 </body>
 </html> 
