--- a/main.html
+++ b/main.html
@@ -4,14 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Open</title>
+    <title>Document</title>
 </head>
 <body>
-    Mukgali is work in github
-    <h1>Mukagali</h1>
-
-    <div>dafasdsdad</div>
-    <span>sajsdkabhh</span>
-    <div>HHelookdsoak</div>
+    <div>Hello Muka</div>
 </body>
-
+</html>
