--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
     <title>Open</title>
 </head>
 <body>
-  
+    <h1>Dias</h1>
+    <div class="Mukash">Dias bari istep tur buirtsa</div>
 </body>
 
