--- a/main.html
+++ b/main.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Dias</h1>
     <div class="Mukash">Dias bari istep tur buirtsa</div>
+    <div style="background-color: red;"> Ahmat sila </div>
 </body>
 
