--- a/main.html
+++ b/main.html
@@ -10,5 +10,6 @@
     <h1>Dias</h1>
     <div class="Mukash">Dias bari istep tur buirtsa</div>
     <div style="background-color: red;"> Ahmat sila </div>
+    <div style="background-color:blue;">ZMMM</div>
 </body>
 
