--- a/main.html
+++ b/main.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./main.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,7 @@
 <body>
     <h1>Dias</h1>
     <div class="Mukash">Dias bari istep tur buirtsa</div>
-    <div style="background-color: red;"> Ahmat sila </div>
-    <div style="background-color:blue;">ZMMM</div>
+    <div class ="div1"> Ahmat sila </div>
+    <div class = "div2">ZMMM</div>
 </body>
 
