--- a/main.html
+++ b/main.html
@@ -12,6 +12,7 @@
     <div class="Mukash">Dias bari istep tur buirtsa</div>
     <div class ="div1"> Ahmat sila </div>
     <div class = "div2">ZMMM</div>
+    <div class = "div5">SDu</div>
     <div class = "div3">Mukgali</div>
 </body>
 
