script is changes

--- a/register.html
+++ b/register.html
@@ -71,19 +71,9 @@
   </div>
 
 
-<script>
-  function openNav() {
-    document.getElementById("mySidenav").style.width = "250px";
-    document.getElementById("main").style.marginLeft = "250px";
-    document.body.style.backgroundColor = "rgba(255,255,255,0.4)";
-  }
-  
-  function closeNav() {
-    document.getElementById("mySidenav").style.width = "0";
-    document.getElementById("main").style.marginLeft= "0";
-    document.body.style.backgroundColor = "black";
-  }
-  </script>
+<script src = "./animation.js">
+ 
+</script>
 
 </body>
 </html>
