background remove color

--- a/register.html
+++ b/register.html
@@ -13,9 +13,13 @@
 <body style="background-color: #fff;">
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#">Services</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
+        <a href="./register.html">Main</a>
+        <a href="./restoran.html">Restaurant</a>
+        <a href="#">Tickets</a>
+        <a href="#">Entertainments</a>
+        <a href="#">Hotel</a>
+        <a href="#">For kids</a>
+        <a href="#">Info</a>
     </div>
     <header style="background-color:#fff; height: 50px;padding-top: 2px;">
         <div class="header">
