--- a/restoran.html
+++ b/restoran.html
@@ -10,21 +10,24 @@
 <body>
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#">Services</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
+        <a href="./register.html">Main</a>
+        <a href="./restoran.html">Restaurant</a>
+        <a href="#">Tickets</a>
+        <a href="#">Entertainments</a>
+        <a href="#">Hotel</a>
+        <a href="#">For kids</a>
+        <a href="#">Info</a>
     </div>
-    <header class = "headerFixed" style="background-color: rgba(0,0,0,.9); height: 50px;padding-top: 2px;">
+    <header style="background-color:#fff; height: 50px;padding-top: 2px;">
         <div class="header">
-            <div id="main">
-                <span  style="font-size:25px;cursor:pointer; color: #ebeff2;" onclick="openNav()">&#9776;</span></div>
+            <div id="main"><span  style="font-size:25px;cursor:pointer; color: #ebeff2;" onclick="openNav()">&#9776;</span></div>
             <div id="LIVE_ID"><img style="width: 36px; vertical-align: middle;"  src="https://shymbulak.com/_nuxt/img/live.e90e98b.svg">L I V E</div>
-            <div id="KOLSAI_ID" style="margin: auto;"><img  style="width: 55px; vertical-align: middle;" src="./IMG_3119.PNG">K O L S A I</div>
+            <div id="KOLSAI_ID" style="margin: auto;"><img  style="width: 55px; vertical-align: middle;" src="./kolsai_logo-removebg-preview (1).png">K O L S A I</div>
             <div id="register_id">Register</div>
             <div id="Sign_in_id">Sign in</div>
             
         </div>
-    </header>    
+    </header> 
     <main>  
         <div class = "page_restaurant">
             <div class = "section section-restaurands">
