few change in restourant

--- a/restoran.html
+++ b/restoran.html
@@ -46,7 +46,7 @@
                                 <div class ="col col_1">
                                     <a href="#">
                                         <div class="media">
-                                            <div class = "restourand_img" style=" background-image: url(./restaurantPicture/5f2290bca043b36077864287b36e13ba.png);" >
+                                            <div class = "restourand_img" style="background-image: url(./restaurantPicture/5f2290bca043b36077864287b36e13ba.png);" >
 
                                             </div>
                                         </div>
@@ -198,9 +198,64 @@
             </div>
         </div>
     </main>
-  
+    <footer>
+        <div class="f-1">
+            <div>
+                <b>Our filials</b><br><br>
+                <li><a href="">Navigation-1</a></li>
+                <li><a href="">Name-2</a></li>
+                <li><a href="">Name-3</a></li>
+                <li><a href="">Name-4</a></li>
+                <li><a href="">Name-5</a></li>
+                <li><a href="">Namasndbmasde-6</a></li>
+                <li><a href="">Name-7</a></li>
+                <li><a href="">Name-8</a></li>
+            </div>
+            <div>
+                <br><br>
+                <li><a href="">Name-9</a></li>
+                <li><a href="">Name-10</a></li>
+                <li><a href="">Name-11</a></li>
+                <li><a href="">Namea12</a></li>
+                <li><a href="">Name-13</a></li>
+                <li><a href="">Name-14</a></li>
+                <li><a href="">Name-15</a></li>
+            </div>
+        </div>
+        <div class="f-1">
+            <div>
+                <b>Something</b><br><br>
+                <li><a href="">Content-1</a></li>
+                <li><a href="">Content-2</a></li>
+                <li><a href="">Content-3</a></li>
+                <li><a href="">Content-4</a></li>
+                <li><a href="">Content-5</a></li>
+            </div>
+            <div>
+                <b>Contact us</b><br><br>
+                <a href="">E-Mail: orta@edu.kz</a><br><br>
+                <a href="">Phone number: 8-(778)-606-88-53</a><br><br>
+                <a href="">Address: city Almaty , str. Al-Farabi ,<br>
+                    Park of First President</a><br><br>
+                <div>
+                        <span><a href=""><img
+                                src="https://icons.veryicon.com/png/128/internet--web/color-social-media-icon/facebook-132.png"
+                                width="35"></a></span>
+                    <span><a href=""><img
+                            src="https://icons.veryicon.com/png/128/internet--web/color-social-media-icon/twitter-158.png"
+                            width="35"></a></span>
+                    <span><a href=""><img
+                            src="https://icons.veryicon.com/png/128/internet--web/color-social-media-icon/instagram-47.png"
+                            width="35"></a></span>
+                    <span><a href=""><img
+                            src="https://icons.veryicon.com/png/128/internet--web/color-social-media-icon/youtube-117.png"
+                            width="35"></a></span>
+                </div>
+            </div>
+        </div>
+    </footer>
 
-<script src="./animation.js">
+<script src="./restoran.js">
   
   </script>
 
