--- a/restoran.html
+++ b/restoran.html
@@ -198,62 +198,68 @@
             </div>
         </div>
     </main>
-    <footer>
-        <div class="f-1">
+<footer>    
+    <div class="f-1">
+        <div>
+            <b>Our restaurants</b><br><br>
+            <li><a href="">Oblaka restobar</a></li>
+            <li><a href="">Base camp Yurta</a></li>
+            <li><a href="">Marrone Rosso</a></li>
+            <li><a href="">Saray bar</a></li>
+            <li><a href="">Paul</a></li>
+            <li><a href="">Rifugio del Monte</a></li>
+        </div>
+        <div>
+            <b>Hotels</b><br><br>
+            <li><a href="">Tenir Eco Hotels</a></li>
+            <li><a href="">S.N.e.G.</a></li>
+            <li><a href="">Base camp Yurta</a></li>
+            <li><a href="">Bianca high-mountain chalets</a></li>
+            <li><a href="">Shymbulak Resort Hotel</a></li>
+        </div>
+    </div>
+    <div class="f-1">
+        <div>
+            <b>Entertainments</b><br><br>
+            <li><a href="">Alpine park</a></li>
+            <li><a href="">Paraplane</a></li>
+            <li><a href="">Snowmobile and ATV rides</a></li>
+            <li><a href="">Horse rides</a></li>
+            <li><a href="">Rope park Medeu</a></li>
+            <li><a href="">Gorilla Zipline</a></li>
+            <li><a href="">Rope park Shymbulak</a></li>
+            <li><a href="">Balloon track</a></li>
+
+        </div>
+        <div>
+            <b>Contact us</b><br><br>
+            <a href="">info@shymbulak.com/a><br><br>
+            <a href="">Phone number: +7 727 331 77 773</a><br><br>
+            <a href="">Address: st. Kerey, Zhanibek Khandar 558/1,Almaty</a><br><br>
             <div>
-                <b>Our filials</b><br><br>
-                <li><a href="">Navigation-1</a></li>
-                <li><a href="">Name-2</a></li>
-                <li><a href="">Name-3</a></li>
-                <li><a href="">Name-4</a></li>
-                <li><a href="">Name-5</a></li>
-                <li><a href="">Namasndbmasde-6</a></li>
-                <li><a href="">Name-7</a></li>
-                <li><a href="">Name-8</a></li>
-            </div>
-            <div>
-                <br><br>
-                <li><a href="">Name-9</a></li>
-                <li><a href="">Name-10</a></li>
-                <li><a href="">Name-11</a></li>
-                <li><a href="">Namea12</a></li>
-                <li><a href="">Name-13</a></li>
-                <li><a href="">Name-14</a></li>
-                <li><a href="">Name-15</a></li>
+                <span><a href=""><img
+                            src="https://icons.veryicon.com/png/128/internet--web/color-social-media-icon/facebook-132.png"
+                            width="35"></a></span>
+                <span><a href=""><img
+                        src="https://icons.veryicon.com/png/128/internet--web/color-social-media-icon/twitter-158.png"
+                        width="35"></a></span>
+                <span><a href=""><img
+                        src="https://icons.veryicon.com/png/128/internet--web/color-social-media-icon/instagram-47.png"
+                        width="35"></a></span>
+                <span><a href=""><img
+                        src="https://icons.veryicon.com/png/128/internet--web/color-social-media-icon/youtube-117.png"
+                        width="35"></a></span>
+                <span><a href=""><img
+                        src="https://shymbulak.com/_nuxt/img/vk.5ab0157.svg"
+                        width="35"></a></span>
+                <span><a href=""><img style="border-radius: 50%;"
+                        src="https://shymbulak.com/_nuxt/img/whatsapp.0aacc07.svg"
+                        width="35"></a></span>   
             </div>
         </div>
-        <div class="f-1">
-            <div>
-                <b>Something</b><br><br>
-                <li><a href="">Content-1</a></li>
-                <li><a href="">Content-2</a></li>
-                <li><a href="">Content-3</a></li>
-                <li><a href="">Content-4</a></li>
-                <li><a href="">Content-5</a></li>
-            </div>
-            <div>
-                <b>Contact us</b><br><br>
-                <a href="">E-Mail: orta@edu.kz</a><br><br>
-                <a href="">Phone number: 8-(778)-606-88-53</a><br><br>
-                <a href="">Address: city Almaty , str. Al-Farabi ,<br>
-                    Park of First President</a><br><br>
-                <div>
-                        <span><a href=""><img
-                                src="https://icons.veryicon.com/png/128/internet--web/color-social-media-icon/facebook-132.png"
-                                width="35"></a></span>
-                    <span><a href=""><img
-                            src="https://icons.veryicon.com/png/128/internet--web/color-social-media-icon/twitter-158.png"
-                            width="35"></a></span>
-                    <span><a href=""><img
-                            src="https://icons.veryicon.com/png/128/internet--web/color-social-media-icon/instagram-47.png"
-                            width="35"></a></span>
-                    <span><a href=""><img
-                            src="https://icons.veryicon.com/png/128/internet--web/color-social-media-icon/youtube-117.png"
-                            width="35"></a></span>
-                </div>
-            </div>
-        </div>
-    </footer>
+    </div>
+</footer>
+
 
 <script src="./restoran.js">
   
