--- a/register.html
+++ b/register.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link rel="html" href="./hews.html">
     
   </head>
 <body style="background-color: #fff;">
@@ -35,8 +36,8 @@
     </header>    
     <div class="main_container">
       <div class="slideshow-container">
-        <div class="mySlides fade">
-          <img src="https://cdn.shymbulak-dev.com/media/6f89df15b34d2599988334e8ab7cde17.png" style="width:37vw; height: 36vw;"><h1>Opening hours of the cable cars</h1>
+        <div class="mySlides fade" >
+          <a href="./hews.html"><img src="https://cdn.shymbulak-dev.com/media/6f89df15b34d2599988334e8ab7cde17.png" style="width:37vw; height: 36vw;"><h1>Opening hours of the cable cars</h1></a>
         </div>
          <div class="mySlides fade">
           <img src="https://cdn.shymbulak-dev.com/media/357a923c060af5c78ae2a9fbb9633934.png" style="width:37vw; height: 36vw;"><h1 style="margin-top: 9%;">Season is open!</h1>
