--- a/register.html
+++ b/register.html
@@ -98,7 +98,7 @@
         <div class="date_div">10.11.22<div>Things to Do with Kids at the Resort</div></div>
         <hr>
         <div class="date_div">11.11.22<div>Resort Privileges</div></div>
-        <div><button id="button_see_all">See all</button></div>
+        <div><a href="./hews.html"><button id="button_see_all">See all</button></a></div>
       </div>
     </div>
     <div id="News">What to do at the resort?</div>
