change intro page

--- a/into_restourant.html
+++ b/into_restourant.html
@@ -68,40 +68,40 @@
                                </div>
                                <div class = "about_icon">
                                     <div class = "card card_1">
-                                        <div class = "icon" >
+                                        <div class = "icon">
                                             <img src="./into_restourand/a1b16c8eddf2d6810731b88b52dd0ed0.svg" alt="icon">
                                         </div>
-                                        <h4 style="height: 3px ; padding: 0 12px;">Average bill</h4>
+                                        <div class = "icon_title" style="display: flex; justify-content: center; margin-top: 1vw;">Average bill</div>
                                     </div>
                                     <div class = "card card_1">
-                                        <div class = "icon" >
+                                        <div class = "icon"  >
                                             <img src="./into_restourand/d5d5cb13296c98c589a1ed49d040152a.svg" alt="icon">
                                         </div>
-                                        <h4 style="height: 3px ; padding: 0 12px;">Average bill</h4>
+                                        <div class = "icon_title" style="display: flex; justify-content: center; margin-top: 1vw;">European</div>
                                     </div>
                                     <div class = "card card_1">
                                         <div class = "icon" >
                                             <img src="./into_restourand/42582faa9e7cfca6627de90e40b39095.svg" alt="icon">
                                         </div>
-                                        <h4 style="height: 3px ; padding: 0 12px;">Average bill</h4>
+                                        <div class = "icon_title" style="display: flex; justify-content: center; margin-top: 1vw;">Bar</div>
                                     </div>
                                     <div class = "card card_1">
                                         <div class = "icon" >
                                             <img src="./into_restourand/8ff4ff0ba39aece6b988e621b07cb808.svg" alt="icon">
                                         </div>
-                                        <h4 style="height: 3px ; padding: 0 12px;">Average bill</h4>
+                                            <div class = "icon_title" style="display: flex; justify-content: center; margin-top: 1vw;">9:30 - 17:00</div>
                                     </div>
                                     <div class = "card card_1">
                                         <div class = "icon" >
                                             <img src="./into_restourand/06b659accde306a99c25c0f417108f26.svg" alt="icon">
                                         </div>
-                                        <h4 style="height: 3px ; padding: 0 12px;">Average bill</h4>
+                                        <div class = "icon_title" style="display: flex; justify-content: center; margin-top: 1vw;">Wi-Fi</div>
                                     </div>
                                     <div class = "card card_1">
                                         <div class = "icon" >
                                             <img src="./into_restourand/b6419c87cd27dee51561c7a66d924897.svg" alt="icon">
                                         </div>
-                                        <h4 style="height: 3px ; padding: 0 12px;">Average bill</h4>
+                                        <div class = "icon_title" style="display: flex; justify-content: center; margin-top: 1vw;">+7 705 705 47 42</div>
                                     </div>
                                </div>
                             </div>
