header and js change

--- a/homepage.html
+++ b/homepage.html
@@ -16,26 +16,27 @@
     
   </head>
 <body>
-    <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="./register.html">Main</a>
-        <a href="./restoran.html">Restaurant</a>
-        <a href="#">Tickets</a>
-        <a href="#">Entertainments</a>
-        <a href="#">Hotel</a>
-        <a href="#">For kids</a>
-        <a href="#">Info</a>
+  <div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="./homepage.html">Main</a>
+    <a href="./restaurants.html">Restaurant</a>
+    <a href="ticket.html">Tickets</a>
+    <a href="./Entertainments.html">Entertainments</a>
+    <a href="./hotels.html">Hotel</a>
+    <a href="./about_us.html">Info</a>
+</div>
+<span class="header changeColor">
+    <div>
+        <li id="main"><span class="main" onclick="openNav()">&#9776;</span></li>
     </div>
-    <header>
-        <div class="header">
-            <div id="main"><span  style="font-size:25px;cursor:pointer; color: #ebeff2;" onclick="openNav()">&#9776;</span></div>
-            <div id="LIVE_ID"><img style="width: 36px; vertical-align: middle;"  src="https://shymbulak.com/_nuxt/img/live.e90e98b.svg">L I V E</div>
-            <div id="KOLSAI_ID" style="margin: auto;"><img  style="width: 30px; vertical-align: middle;" src="./shymbulak-logo.6467f58.svg">S H Y M B U L A K</div>
-            <div id="register_id">Register</div>
-            <div id="Sign_in_id">Sign in</div>
-            
-        </div>
-    </header>    
+    <div>
+        <li id="KOLSAI_ID" id="KOLSAI_ID"><img class="logo" src="blacklogo.PNG">S H Y M B U L A K</li>
+    </div>
+    <div class="id">
+        <li id="register_id">Register</li>
+        <li id="Sign_in_id">Sign in</li>
+    </div>
+</span>  
     <div class="main_container">
       <div class="slideshow-container">
         <div class="mySlides fade" >
