--- a/hotels.html
+++ b/hotels.html
@@ -10,15 +10,16 @@
     <script src="hotels.js"></script>
 </head>
 <body>
-<div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="./homepage.html">Main</a>
-    <a href="./restaurants.html">Restaurant</a>
-    <a href="ticket.html">Tickets</a>
-    <a href="./Entertainments.html">Entertainments</a>
-    <a href="./hotels.html">Hotel</a>
-    <a href="./about_us.html">Info</a>
-</div><span class="header">
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="./homepage.html">Main</a>
+        <a href="./restaurants.html">Restaurant</a>
+        <a href="ticket.html">Tickets</a>
+        <a href="./Entertainments.html">Entertainments</a>
+        <a href="./hotels.html">Hotel</a>
+        <a href="./about_us.html">Info</a>
+    </div>
+<span class="header">
     <div>
         <li id="main"><span class="main" onclick="openNav()">&#9776;</span></li>
     </div>
