--- a/welcome.html
+++ b/welcome.html
@@ -17,7 +17,7 @@
             <div class="displaynone">
                
                 <a class="navtext" href="#aboutus">About us</a>
-                <a class="navbutton" style="color: white;" hre>Sign-in</a>
+                <a class="navbutton" style="color: wheat;" hre>Sign-in</a>
                 <a class="navbutton" style="color: white;">Sign-up</a>
             </div>
         </div>
