--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img class = "icon" src="./IMG_3119-removebg-preview.png">
             <div class="displaynone">
                
-                <a class="navtext" href="#">About us</a>
+                <a class="navtext" href="./restaurants.html">About us</a>
                 <a class="navbutton" style="color: wheat;" hre>Sign-in</a>
                 <a class="navbutton" style="color: white;">Sign-up</a>
             </div>
