--- a/inhotels.html
+++ b/inhotels.html
@@ -15,7 +15,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="./homepage.html">Main</a>
         <a href="./restaurants.html">Restaurant</a>
-        <a href="ticket.html">Tickets</a>
+        <a href="./ticket.html">Tickets</a>
         <a href="./Entertainments.html">Entertainments</a>
         <a href="./hotels.html">Hotel</a>
         <a href="./about_us.html">Info</a>
@@ -25,7 +25,7 @@
         <li id="main"><span class="main" onclick="openNav()">&#9776;</span></li>
     </div>
     <div>
-        <li id="KOLSAI_ID" id="KOLSAI_ID"><img class="logo" src="blacklogo.PNG">S H Y M B U L A K</li>
+        <li id="KOLSAI_ID"><img class="logo" src="./logo_moon+light-removebg-preview.png">K O L S A Y</li>
     </div>
     <div class="id">
         <li id="register_id">Register</li>
