--- a/restaurants.html
+++ b/restaurants.html
@@ -21,7 +21,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="./homepage.html">Main</a>
         <a href="./restaurants.html">Restaurant</a>
-        <a href="ticket.html">Tickets</a>
+        <a href="./ticket.html">Tickets</a>
         <a href="./Entertainments.html">Entertainments</a>
         <a href="./hotels.html">Hotel</a>
         <a href="./about_us.html">Info</a>
@@ -31,7 +31,7 @@
         <li id="main"><span class="main" onclick="openNav()">&#9776;</span></li>
     </div>
     <div>
-        <li id="KOLSAI_ID" id="KOLSAI_ID"><img class="logo" src="blacklogo.PNG">S H Y M B U L A K</li>
+        <li id="KOLSAI_ID" id="KOLSAI_ID"><img class="logo" src="./logo_moon+light-removebg-preview.png">K O L S A Y</li>
     </div>
     <div class="id">
         <li id="register_id">Register</li>
@@ -44,7 +44,7 @@
 <div class="news_wrapper">
     <a href="#" class="hotel-link" id="id1" onclick="callHotel(id)">
         <div class="one_hotel">
-            <img src="https://cdn.shymbulak-dev.com/media/01cc68c90495bcf35af0d9a51e452607.png" alt="photo">
+            <img src="https://abr.kz/storage/app/uploads/public/635/8c5/ec5/6358c5ec51f37991756879.jpg" alt="photo">
             <div class="hotel-data">
                 <div class="hotel-data-desc">S.N.e.G.</div>
                 <div class="hotel-data-les">from 5 500 ₸</div>
@@ -90,8 +90,8 @@
             </div>
         </div>
     </a>
-    <a href="#" class="hotel-link">
-        <div class="one_hotel" id="id6" onclick="callHotel(id)">
+    <a href="#" class="hotel-link" id="id6" onclick="callHotel(id)">
+        <div class="one_hotel" >
             <img src="https://cdn.shymbulak-dev.com/media/03c5d0ee9e8a2a4e61a58c222b91d7d5.png"
                  alt="photo">
             <div class="hotel-data">
