--- a/about_us.html
+++ b/about_us.html
@@ -10,7 +10,7 @@
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="./homepage.html">Main</a>
     <a href="./restaurants.html">Restaurant</a>
-    <a href="ticket.html">Tickets</a>
+    <a href="./ticket.html">Tickets</a>
     <a href="./Entertainments.html">Entertainments</a>
     <a href="./hotels.html">Hotel</a>
     <a href="./about_us.html">Info</a>
@@ -20,7 +20,7 @@
         <li id="main"><span class="main" onclick="openNav()">&#9776;</span></li>
     </div>
     <div>
-        <li id="KOLSAI_ID" id="KOLSAI_ID"><img class="logo" src="blacklogo.PNG">S H Y M B U L A K</li>
+        <li id="KOLSAI_ID"><img class="logo" src="./logo_moon+light-removebg-preview.png">K O L S A Y</li>
     </div>
     <div class="id">
         <li id="register_id">Register</li>
@@ -32,40 +32,27 @@
     <div class="picture"></div>
     <div class="info">
         <div class="text">
-            <p class="orta">abr - это более 15 ресторанных концепций,<br>
-                раскрывающих новые грани вкуса.</p>
-            <p class="grey">50 ресторанов, 1500 сотрудников, 7 миллионов гостей в год. Это лишь малая часть 10-летнего
-                опыта компании abr в ресторанной индустрии. Начав с пивного ресторана “Бочонок”, мы трансформировались в
-                сообщество людей, которые двигают вперед гастрономическую культуру Казахстана. Новаторские концепции
-                ресторанов и ужинов, фестивали, сотрудничество с топовыми мировыми шефами и бартендерами, а также
-                бесконечное обновление и поиск новых идей - мы те, кто задает тренды.</p>
+            <p class="orta">Kolsay Lakes National Park</p>
+            <p class="grey">There are guest-houses and campsites in the nearby village of Saty. There is a 25 km hiking route that begins at the lower lake, progresses by the Kolsay lakes, and moves over the Sary-Bulak pass (3,278 m). The route takes three days by foot, or one day by horse. Kolsay Lakes are a popular mountain tourism destination in the region. Hiking trails to Kolsay Lakes are relatively accessible for beginners. Popular activities in the area include picnics, horse riding, and mountain biking. April to late September are standard periods for camping in the area.</p>
             <div class="quote">
                 <img class="open"
                      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTCmqw5zQRyATNsb_pCfszzKHEYa31bSpRgvw&usqp=CAU">
                 <p class="quote_text">
-                    «Мне хочется поделиться с вами тем, что сейчас действительно важно для нас: мы основали эту компанию
-                    с особой целью - делать жизнь лучше. abr - это не просто ресторанный бизнес. Это тонкий и невероятно
-                    интересный процесс, через который мы транслируем свои ценности и большую цель - делиться вкусом к
-                    жизни через вкус к еде. Я всегда полагал, что это важно – доверять своему чутью и следовать зову
-                    сердца, и я безмерно рад, что в этом мы схожи с каждым нашим сотрудником и гостем» - рассказывает
-                    основатель сети Аскар Байтасов.
+                    Kolsay Lakes – one of the most beautiful places in Kazakhstan. These lakes are located at heights 1800, 2250 and 2700 metres above sea level. They are distinguished by the unique mountain watershed consisting of three natural zones and amazing variety of rare plants and animals. Kolsay Lakes are considered a pearl of Northern Tien-Shan located in 300 km from Almaty city.
                     <img align="right" class="close"
                          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTCmqw5zQRyATNsb_pCfszzKHEYa31bSpRgvw&usqp=CAU"
                          alt="">
                 </p>
             </div>
-            <p class="grey">Сегодня гастрономия - это отдельная культура, которая легко переплетается со всеми сферами
-                нашей жизни. Она влияет на город, искусство, моду и многое другое, и мы доказываем это своими проектами.
-                Легко сплетая урбанистику и рестораторство, мы рассказываем истории через проекты вроде Urbanitarium.
-                Задумываясь о будущем нашего города и планеты, мы внедряем инициативу Go Green.</p>
+            <p class="grey">Those, who at least once visited these places, will never forget their magnificence and calmness around. When the water smooth surface is absolutely quiet, the sky and a bewitching panorama of a mountain landscape are reflected in it. Surrounded with rocks, woods, the Alpine meadows and the whole glades of gentle-olive mountain colours – edelweisses, lakes bewitch you literally</p>
         </div>
         <div class="numbers">
             <h1>10</h1>
             <p>years</p>
-            <h1>50</h1>
-            <p>restaurants</p>
-            <h1>7</h1>
-            <p>million guests</p>
+            <h1>+870</h1>
+            <p>trips</p>
+            <h1>+30</h1>
+            <p>thousands guests</p>
         </div>
     </div>
 </div>
@@ -73,7 +60,7 @@
     <div class="f-1">
         <div>
             <b>Our restaurants</b><br><br>
-            <li><a href="">Oblaka restobar</a></li>
+            <li><a href=""></a></li>
             <li><a href="">Base camp Yurta</a></li>
             <li><a href="">Marrone Rosso</a></li>
             <li><a href="">Saray bar</a></li>
