mobile adaptation homepage

--- a/homepage.html
+++ b/homepage.html
@@ -9,33 +9,33 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 
-    <link rel="stylesheet" href="homepage.css">
-    <link rel="stylesheet" href="../directory/restoran.css">
     <script src="./news.js"></script>
     <script src="./innews.js"></script>
+    <link rel="stylesheet" href="homepage.css">
+    <link rel="stylesheet" href="./footer.css">
   </head>
 <body>
-  <div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="./homepage.html">Main</a>
-    <a href="./restaurants.html">Restaurant</a>
-    <a href="ticket.html">Tickets</a>
-    <a href="./Entertainments.html">Entertainments</a>
-    <a href="./hotels.html">Hotel</a>
-    <a href="./about_us.html">Info</a>
-</div>
-<span class="header changeColor">
-    <div>
-        <li id="main"><span class="main" onclick="openNav()">&#9776;</span></li>
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="./homepage.html">Main</a>
+        <a href="./restaurants.html">Restaurant</a>
+        <a href="ticket.html">Tickets</a>
+        <a href="./Entertainments.html">Entertainments</a>
+        <a href="./hotels.html">Hotel</a>
+        <a href="./about_us.html">Info</a>
     </div>
-    <div>
-        <li id="KOLSAI_ID"><img class="logo" src="./logo_moon+light-removebg-preview.png">K O L S A Y</li>
-    </div>
-    <div class="id">
-        <li id="register_id">Register</li>
-        <li id="Sign_in_id">Sign in</li>
-    </div>
-</span>  
+    <span class="header changeColor">
+        <div>
+            <li id="main"><span class="main" onclick="openNav()">&#9776;</span></li>
+        </div>
+        <div>
+            <li id="KOLSAI_ID"><img class="logo" src="./logo_moon+light-removebg-preview.png">K O L S A Y</li>
+        </div>
+        <div class="id">
+            <li id="register_id">Register</li>
+            <li id="Sign_in_id">Sign in</li>
+        </div>
+    </span>  
 
 <div class="main_container">
   <div class="slideshow-container">
