--- a/innews.html
+++ b/innews.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Innews</title>
-    <link rel="stylesheet" href="./homepage.css">
-    <link rel="stylesheet" href="../directory/restoran.css">
-    <link rel="stylesheet" href="innews.css">
 
-    <script src="./homepage.js"></script>
     <script src="./news.js"></script>
     <script src="./innews.js"></script>
+    
+    <link rel="stylesheet" href="./homepage.css">
+    <link rel="stylesheet" href="./innews.css">
+    <link rel="stylesheet" href="./footer.css">
 </head>
 <body onload="hotel()">
     <div id="mySidenav" class="sidenav">
@@ -103,56 +103,61 @@
     <div class="f-1">
         <div>
             <b>Our restaurants</b><br><br>
-            <li><a href="">Oblaka restobar</a></li>
-            <li><a href="">Base camp Yurta</a></li>
-            <li><a href="">Marrone Rosso</a></li>
-            <li><a href="">Saray bar</a></li>
-            <li><a href="">Paul</a></li>
-            <li><a href="">Rifugio del Monte</a></li>
+            <li><a href="./restaurants.html">S.N.e.G</a></li>
+            <li><a href="./restaurants.html">Chalet</a></li>
+            <li><a href="./restaurants.html">Assorti</a></li>
+            <li><a href="./restaurants.html">Oblaka restobar</a></li>
+            <li><a href="./restaurants.html">Marrone Rosso</a></li>
+            <li><a href="./restaurants.html">Base camp Yurta</a></li>
+            <li><a href="./restaurants.html">Saray Bar</a></li>
+            <li><a href="./restaurants.html">Paul</a></li>
+            <li><a href="./restaurants.html">Rifugio del Monte</a></li>
         </div>
         <div>
             <b>Hotels</b><br><br>
-            <li><a href="">Tenir Eco Hotels</a></li>
-            <li><a href="">S.N.e.G.</a></li>
-            <li><a href="">Base camp Yurta</a></li>
-            <li><a href="">Bianca high-mountain chalets</a></li>
-            <li><a href="">Shymbulak Resort Hotel</a></li>
+            <li><a href="./hotels.html">Guest House Kolsay Lakes</a></li>
+            <li><a href="./hotels.html">Bereke Kolsay Resort</a></li>
+            <li><a href="./hotels.html">Kolsay Lakes Town</a></li>
+            <li><a href="./hotels.html">Kolsay Lakes Nomads</a></li>
+            <li><a href="./hotels.html">Glamping Kolsay</a></li>
         </div>
     </div>
     <div class="f-1">
         <div>
             <b>Entertainments</b><br><br>
-            <li><a href="">Alpine park</a></li>
-            <li><a href="">Paraplane</a></li>
-            <li><a href="">Snowmobile and ATV rides</a></li>
-            <li><a href="">Horse rides</a></li>
-            <li><a href="">Rope park Medeu</a></li>
-            <li><a href="">Gorilla Zipline</a></li>
-            <li><a href="">Rope park Shymbulak</a></li>
-            <li><a href="">Balloon track</a></li>
+            <li><a href="./Entertainments.html">Alpine park</a></li>
+            <li><a href="./Entertainments.html">Paraplane</a></li>
+            <li><a href="./Entertainments.html">Snowmobile and ATV rides</a></li>
+            <li><a href="./Entertainments.html">Horse rides</a></li>
+            <li><a href="./Entertainments.html">Rope park Medeu</a></li>
+            <li><a href="./Entertainments.html">Gorilla Zipline</a></li>
+            <li><a href="./Entertainments.html">Rope park Kolsay</a></li>
+            <li><a href="/Entertainments.html">Balloon track</a></li>
 
         </div>
         <div>
             <b>Contact us</b><br><br>
-            <a href="">E-Mail: orta@edu.kz</a><br><br>
+            <a href="http://www.eco-tourism.kz/05112012.html">E-Mail: kolsay-eco-tur@gmail.com</a><br><br>
             <a href="">Phone number: +7 727 331 77 77</a><br><br>
             <a href="">Address: st. Kerey, Zhanibek Khandar 558/1, Almaty</a><br><br>
             <div>
-                    <span><a href=""><img
+                    <span><a href="https://www.facebook.com/groups/854931824638438/posts/2254343474697259/"><img
                             src="https://icons.veryicon.com/png/128/internet--web/color-social-media-icon/facebook-132.png"
                             width="35"></a></span>
-                <span><a href=""><img
+                <span><a href="https://twitter.com/syrymtau/status/1401618324304322560?lang=en"><img
                         src="https://icons.veryicon.com/png/128/internet--web/color-social-media-icon/twitter-158.png"
                         width="35"></a></span>
-                <span><a href=""><img
+                <span><a href="https://www.instagram.com/kolsay.nomads/?hl=en"><img
                         src="https://icons.veryicon.com/png/128/internet--web/color-social-media-icon/instagram-47.png"
                         width="35"></a></span>
-                <span><a href=""><img
+                <span><a href="https://youtu.be/1Bs7x2X5JsQ"><img
                         src="https://icons.veryicon.com/png/128/internet--web/color-social-media-icon/youtube-117.png"
                         width="35"></a></span>
             </div>
         </div>
     </div>
 </footer>
+<script src="./homepage.js"></script>
+
 </body>
 </html>
