--- a/Entertainments.html
+++ b/Entertainments.html
@@ -8,13 +8,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 
-    <link rel="stylesheet" href="./header.css">
+    <link rel="stylesheet" href="./homepage.css">
     <link rel="stylesheet" href="./footer.css">
     <link rel="stylesheet" href="./Entertainments.css">
     <link rel="stylesheet" href="./about_us_styles.css">
     
     <script src="./Entertainments.js"></script>
-    <script src="./inEntertainments.js"></script>
    
 </head>
 <body>
@@ -22,7 +21,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="./homepage.html">Main</a>
         <a href="./restaurants.html">Restaurant</a>
-        <a href="ticket.html">Tickets</a>
+        <a href="./ticket.html">Tickets</a>
         <a href="./Entertainments.html">Entertainments</a>
         <a href="./hotels.html">Hotel</a>
         <a href="./about_us.html">Info</a>
