--- a/hotels.html
+++ b/hotels.html
@@ -6,7 +6,7 @@
     <title>Hotels</title>
     <link rel="stylesheet" href="./hotels.css">
     <link rel="stylesheet" href="./footer.css">
-    <link rel="stylesheet" href="./homepage.css">
+    <link rel="stylesheet" href="./header.css">
 
     <script src="ticket.js"></script>
     <script src="hotels.js"></script>
