--- a/inhotels.html
+++ b/inhotels.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./hotels.css">
     <link rel="stylesheet" href="./inhotels.css">
     <link rel="stylesheet" href="./footer.css">
-    <link rel="stylesheet" href="./footer.css">
+    <link rel="stylesheet" href="./header.css">
 
 </head>
 <body onload="hotel()">
