--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
         <div class="navbetween">
             <img class = "icon" src="./logo_moon+light-removebg-preview.png">
             <div class="displaynone">
-               
                 <a class="navtext" href="./about_us.html">About us</a>
-                <a class="navbutton" style="color: white;">Sign-in</a>
-                <a class="navbutton" style="color: white;">Sign-up</a>
+                <a class="navbutton" style="color: white;" href="./lab8.html">Sign-in</a>
             </div>
         </div>
         
