--- a/about_us.html
+++ b/about_us.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="about_us_styles.css">
     <link rel="stylesheet" href="./footer.css">
     <link rel="stylesheet" href="./header.css">
@@ -13,35 +15,37 @@
         <a href="./homepage.html">Main</a>
         <a href="./restaurants.html">Restaurant</a>
         <a href="ticket.html">Tickets</a>
-        <a href="./Entertainments.html">Entertainments</a>
+        <a href="./Enternainments.html">Entertainments</a>
         <a href="./hotels.html">Hotel</a>
         <a href="./about_us.html">Info</a>
     </div>
-    <span class="header changeColor">
+    <span class="header">
         <div>
             <li id="main"><span class="main" onclick="openNav()">&#9776;</span></li>
         </div>
         <div>
-            <li id="KOLSAI_ID"><img class="logo" src="./logo_moon+light-removebg-preview.png">K O L S A Y</li>
+            <li id="KOLSAI_ID">K O L<img class="logo"
+                                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaiibfj8vazQvlEDPUJzC36huDhRhzUn048J56c0mlIZfGqkqQ3KKvcfJcdRLX0vT3_4M&usqp=CAU">A I</li>
         </div>
         <div class="id">
-            <li id="register_id">Register</li>
-            <li id="Sign_in_id">Sign in</li>
+            <li class="log-in"><a href="">Nurzat Tynyshbekov<span class="smile">&#9786;</span></a></li>
         </div>
-    </span>  
+    </span>
+
+    
 <div class="wrapper">
     <h1>About us</h1>
     <div class="picture"></div>
     <div class="info">
         <div class="text">
             <p class="orta">Kolsay Lakes National Park</p>
-            <p class="grey">There are guest-houses and campsites in the nearby village of Saty. There is a 25 km hiking route that begins at the lower lake, progresses by the Kolsay lakes, and moves over the Sary-Bulak pass (3,278 m). The route takes three days by foot, or one day by horse. Kolsay Lakes are a popular mountain tourism destination in the region. Hiking trails to Kolsay Lakes are relatively accessible for beginners. Popular activities in the area include picnics, horse riding, and mountain biking. April to late September are standard periods for camping in the area.</p>
+            <p class="grey">There are guest-houses and campsites in the nearby village of Saty. There is a 25 km hiking route that begins at the lower lake, progresses by the Kolsay lakes, and moves over the Sary-Bulak pass (3,278 m). </p>
             <div class="quote">
                 <img class="open"
                      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTCmqw5zQRyATNsb_pCfszzKHEYa31bSpRgvw&usqp=CAU">
                 <p class="quote_text">
                     Kolsay Lakes – one of the most beautiful places in Kazakhstan. These lakes are located at heights 1800, 2250 and 2700 metres above sea level. They are distinguished by the unique mountain watershed consisting of three natural zones and amazing variety of rare plants and animals. Kolsay Lakes are considered a pearl of Northern Tien-Shan located in 300 km from Almaty city.
-                    <img align="right" class="close"
+                    <img  class="close"
                          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTCmqw5zQRyATNsb_pCfszzKHEYa31bSpRgvw&usqp=CAU"
                          alt="">
                 </p>
@@ -58,6 +62,7 @@
         </div>
     </div>
 </div>
+
 <footer>
     <div class="f-1">
         <div>
@@ -117,7 +122,6 @@
     </div>
 </footer>
 
-<script src="about_us_scripts.js"></script>
 <script src="./homepage.js"></script>
 </body>
 </html>
