--- a/homepage.html
+++ b/homepage.html
@@ -11,8 +11,10 @@
 
     <script src="./news.js"></script>
     <script src="./innews.js"></script>
-    <link rel="stylesheet" href="homepage.css">
+    <link rel="stylesheet" href="./homepage.css">
     <link rel="stylesheet" href="./footer.css">
+
+    
     
   </head>
 <body>
@@ -21,22 +23,23 @@
         <a href="./homepage.html">Main</a>
         <a href="./restaurants.html">Restaurant</a>
         <a href="ticket.html">Tickets</a>
-        <a href="./Entertainments.html">Entertainments</a>
+        <a href="./Enternainments.html">Entertainments</a>
         <a href="./hotels.html">Hotel</a>
         <a href="./about_us.html">Info</a>
     </div>
-    <span class="header changeColor">
+    <span class="header">
         <div>
             <li id="main"><span class="main" onclick="openNav()">&#9776;</span></li>
         </div>
         <div>
-            <li id="KOLSAI_ID"><img class="logo" src="./logo_moon+light-removebg-preview.png">K O L S A Y</li>
+            <li id="KOLSAI_ID">K O L<img class="logo"
+                                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaiibfj8vazQvlEDPUJzC36huDhRhzUn048J56c0mlIZfGqkqQ3KKvcfJcdRLX0vT3_4M&usqp=CAU">A I</li>
         </div>
         <div class="id">
-            <li id="register_id">Register</li>
-            <li id="Sign_in_id">Sign in</li>
+            <li class="log-in"><a href="">Nurzat Tynyshbekov<span class="smile">&#9786;</span></a></li>
         </div>
     </span>  
+
 
 <div class="main_container">
   <div class="slideshow-container">
@@ -184,7 +187,7 @@
       <div class="date_div">11.11.22<a href="#" id="id8" onclick="callHotel(id)">
           <div class="name">Welcome to the winter season❄️</div>
       </a></div>
-      <div><a href="./news.html">
+      <div class="buttonss"><a href="./news.html">
           <button id="button_see_all">See all</button>
       </a></div>
   </div>
