--- a/innews.html
+++ b/innews.html
@@ -9,7 +9,7 @@
     <script src="./news.js"></script>
     <script src="./innews.js"></script>
     
-    <link rel="stylesheet" href="./homepage.css">
+    <link rel="stylesheet" href="./header.css">
     <link rel="stylesheet" href="./innews.css">
     <link rel="stylesheet" href="./footer.css">
 </head>
@@ -18,23 +18,24 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="./homepage.html">Main</a>
         <a href="./restaurants.html">Restaurant</a>
-        <a href="./ticket.html">Tickets</a>
-        <a href="./Entertainments.html">Entertainments</a>
+        <a href="ticket.html">Tickets</a>
+        <a href="./Enternainments.html">Entertainments</a>
         <a href="./hotels.html">Hotel</a>
         <a href="./about_us.html">Info</a>
     </div>
-<span class="header changeColor">
-    <div>
-        <li id="main"><span class="main" onclick="openNav()">&#9776;</span></li>
-    </div>
-    <div>
-        <li id="KOLSAI_ID"><img class="logo" src="./logo_moon+light-removebg-preview.png">K O L S A Y</li>
-    </div>
-    <div class="id">
-        <li id="register_id">Register</li>
-        <li id="Sign_in_id">Sign in</li>
-    </div>
-</span>
+    <span class="header">
+        <div>
+            <li id="main"><span class="main" onclick="openNav()">&#9776;</span></li>
+        </div>
+        <div>
+            <li id="KOLSAI_ID">K O L<img class="logo"
+                                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaiibfj8vazQvlEDPUJzC36huDhRhzUn048J56c0mlIZfGqkqQ3KKvcfJcdRLX0vT3_4M&usqp=CAU">A I</li>
+        </div>
+        <div class="id">
+            <li class="log-in"><a href="">Nurzat Tynyshbekov<span class="smile">&#9786;</span></a></li>
+        </div>
+    </span>  
+
 
 <div class="Newsid">News</div>
 
