--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href="./welcome.css">
-    
+    <script src="./lab8.js"></script>
 
 
     <title>KOLSAY</title>
@@ -16,7 +16,7 @@
         <div class="navbetween">
             <img class = "icon" src="./logo_moon+light-removebg-preview.png">
             <div class="displaynone">
-                <a class="navtext" href="./about_us.html">About us</a>
+                <a class="navtext" href="./about_us.html" onclick="clear()">About us</a>
                 <a class="navbutton" style="color: white;" href="./lab8.html">Sign-in</a>
             </div>
         </div>
