--- a/Enternainments.html
+++ b/Enternainments.html
@@ -13,16 +13,17 @@
     <link rel="stylesheet" href="./footer.css">
     <link rel="stylesheet" href="./about_us_styles.css">
     <link rel="stylesheet" href="./Entertainments.css">
+    <script src="./lab8.js"></script>
     
     <script src="./Entertainments.js"></script>
 </head>
-<body>
+<body onload="checkUser()">
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="./homepage.html">Main</a>
         <a href="./restaurants.html">Restaurant</a>
         <a href="ticket.html">Tickets</a>
-        <a href="./Entertainments.html">Entertainments</a>
+        <a href="./Enternainments.html">Entertainments</a>
         <a href="./hotels.html">Hotel</a>
         <a href="./about_us.html">Info</a>
     </div>
@@ -35,7 +36,7 @@
                                          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaiibfj8vazQvlEDPUJzC36huDhRhzUn048J56c0mlIZfGqkqQ3KKvcfJcdRLX0vT3_4M&usqp=CAU">A I</li>
         </div>
         <div class="id">
-            <li class="log-in"><a href="">Nurzat Tynyshbekov<span class="smile">&#9786;</span></a></li>
+            <li class="log-in"><p id="myprofile"></p></li>
         </div>
     </span>  
 <div class="Newsid">Entertainments</div>
