--- a/homepage.html
+++ b/homepage.html
@@ -13,11 +13,10 @@
     <script src="./innews.js"></script>
     <link rel="stylesheet" href="./homepage.css">
     <link rel="stylesheet" href="./footer.css">
-
     
     
   </head>
-<body>
+<body onload="checkUser()">
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="./homepage.html">Main</a>
@@ -36,7 +35,7 @@
                                          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaiibfj8vazQvlEDPUJzC36huDhRhzUn048J56c0mlIZfGqkqQ3KKvcfJcdRLX0vT3_4M&usqp=CAU">A I</li>
         </div>
         <div class="id">
-            <li class="log-in"><a href="">Nurzat Tynyshbekov<span class="smile">&#9786;</span></a></li>
+            <li class="log-in"><p id="myprofile"></p></li>
         </div>
     </span>  
 
@@ -281,6 +280,8 @@
   </div>
 </footer>
 <script src="homepage.js"></script>
+<script src="./lab8.js"></script>
+
 
 </body>
 </html>
