--- a/inrestaurants.html
+++ b/inrestaurants.html
@@ -12,10 +12,12 @@
     <link rel="stylesheet" href="./restaurants.css">
     <link rel="stylesheet" href="./ticket.css">
     <link rel="stylessheet" href="./header.css">
+    <script src="./lab8.js"></script>
+
 
 
 </head>
-<body onload="hotel()">
+<body onload="checkUser()">
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="./homepage.html">Main</a>
@@ -34,7 +36,7 @@
                                          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaiibfj8vazQvlEDPUJzC36huDhRhzUn048J56c0mlIZfGqkqQ3KKvcfJcdRLX0vT3_4M&usqp=CAU">A I</li>
         </div>
         <div class="id">
-            <li class="log-in"><a href="">Nurzat Tynyshbekov<span class="smile">&#9786;</span></a></li>
+            <li class="log-in"><p id="myprofile"></p></li>
         </div>
     </span>  
 
