--- a/restaurants.html
+++ b/restaurants.html
@@ -13,9 +13,10 @@
     <link rel="stylesheet" href="./footer.css">
 
     <script src="./restaurants.js"></script>
+    <script src="./lab8.js"></script>
 
 </head>
-<body>
+<body onload="checkUser()">
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="./homepage.html">Main</a>
@@ -34,9 +35,9 @@
                                          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaiibfj8vazQvlEDPUJzC36huDhRhzUn048J56c0mlIZfGqkqQ3KKvcfJcdRLX0vT3_4M&usqp=CAU">A I</li>
         </div>
         <div class="id">
-            <li class="log-in"><a href="">Nurzat Tynyshbekov<span class="smile">&#9786;</span></a></li>
+            <li class="log-in"><p id="myprofile"></p></li>
         </div>
-    </span>
+    </span>  
 
 <div class="Newsid">Restaurants</div>
 
