--- a/ticket.html
+++ b/ticket.html
@@ -12,10 +12,12 @@
     <link rel="stylesheet" href="./ticket.css">
     <link rel="stylesheet" href="./header.css">
     <script src="ticket.js"></script>
+    <script src="./lab8.js"></script>
+
 
 
 </head>
-<body>
+<body onload="checkUser()">
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="./homepage.html">Main</a>
@@ -34,9 +36,9 @@
                                          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaiibfj8vazQvlEDPUJzC36huDhRhzUn048J56c0mlIZfGqkqQ3KKvcfJcdRLX0vT3_4M&usqp=CAU">A I</li>
         </div>
         <div class="id">
-            <li class="log-in"><a href="">Nurzat Tynyshbekov<span class="smile">&#9786;</span></a></li>
+            <li class="log-in"><p id="myprofile"></p></li>
         </div>
-    </span>
+    </span>  
 <div>
     <div class="in-1">
         <h1>Cable car tickets</h1>
